fix: spacing, loading

--- a/src/containers/Search/Search.module.scss
+++ b/src/containers/Search/Search.module.scss
@@ -1,5 +1,5 @@
 .search {
-  padding: rem(60px) 0 rem(88px) 0;
+  padding: rem(32px) 0 rem(88px) 0;
 
   &_category {
     padding-bottom: rem(10px);
